# jenkins-credential-detector

./: .env.example  .gitignore  Dockerfile.scanner  README.md  alembic.ini  config.example.yml  docker-compose.yml  pyproject.toml
api/: deps.py  main.py  schemas.py
api/routers/: builds.py  exemptions.py  findings.py  stats.py
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: a2e4d65052a9_initial_schema.py
frontend/: index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js
frontend/src/views/: BuildDetail.vue  Dashboard.vue  Exemptions.vue  Findings.vue
notifications/: apprise_sender.py
scanner/: config.py  discovery.py  exemptions.py  main.py  pipeline.py  provenance.py
scanner/detectors/: llm_detector.py  regex_detector.py  trufflehog_detector.py
tests/: test_discovery.py  test_exemptions.py  test_provenance.py  test_regex_detector.py
tests/fixtures/: build_gerrit.xml  build_manual.xml  build_timer.xml  build_upstream.xml
